--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "autoprefixer": "^10.4.19",
     "firebase": "^10.12.2",
     "glob": "^10.4.1",
@@ -19,6 +20,8 @@
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "rimraf": "^5.0.7",
     "tailwindcss": "^3.4.3"
